# unnamedfo

./: .gitignore  Cargo.toml  fmdb  readme.md  yaml_format.txt
src/: config_reader.rs  db.rs  error.rs  format.rs  helper.rs  indexer.rs  main.rs  mover.rs  path.rs  schema.rs  search.rs
src/parser/: format.rs
testdir/: fo.db
