[package]
name = "picofo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
async-std = {version="1.12.0",features=["attributes"]}
clap = { version = "4.1.4", features = ["derive"] }
sqlx = {version = "0.6.2",features=["runtime-async-std-native-tls","sqlite"]}
