[package]
name = "picofo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-recursion = "1.0.2"
async-std = {version="1.12.0",features=["attributes"]}
base64ct = {version="1.5.3",features=["alloc"]}
chrono = {version="0.4.23",features=["clock"]}
clap = { version = "4.1.4", features = ["derive"] }
md-5 = "0.10.5"
nom = "7.1.3"
regex = "1.7.1"
serde = { version = "1.0.152", features = ["derive"] }
serde_yaml = "0.9.17"
sqlx = {version = "0.6.2",features=["runtime-async-std-native-tls","sqlite","chrono"]}
